Ethics and conclusion

--- a/doc/evidence_policy.tex
+++ b/doc/evidence_policy.tex
@@ -265,10 +265,12 @@ Conducting the experiment at the federal level would be substantially interestin
 \section{Experimental analysis} \label{sec:analysis}
 
 \subsection{Estimation of treatment effects} \label{sec:treatment_effects}
-
+Treatment effects for this experiment will be computed using a simple Difference in Means (DIM) estimator, with appropriate weighting based on our chosen block assignment mechanism. 
 
 
 \section{Ethical considerations} \label{sec:Ethics}
+We recognize that reaching out to policy-makers with information on a policy can possibly involve ethical challenges. \citet{butler2011politicians} lay out three types of ethical risks associated with experiments on public officials. The first is the use of deception: policy-makers will not know that the email we send are part of an experiment. However, the information we will provide policy-makers will be real, and we will offer to organize real meetings with an organization that specializes on the topic and on reaching out to legislators. Therefore, we believe we would only be widening the pie of knowledge for policy-makers, providing new information that they would not otherwise have received, without taking anything away from anyone. Our net effect on the legislature will be positive, without any individual negative effect. The second ethical risk implies to minimize any harm that the experiment can cause. The anonymity of legislator will be preserved: no data will be available that can connect an answer to a specific legislator, only averages will be made public. This need for anonymity fits well with what science requires: we would never observe all potential outcomes for an individual legislator, therefore the only causal value of the experiment is in the averages. The third risk is the potential burden our experiment would place on legislators' time. We will do our best to keep our initial email as short and simple as possible, in order to minimize the efforts involved in answering. We recognize that a meeting would take more time out of legislators' already busy schedules. But we believe that an office that agrees to the meeting would be interested in learning about the given policy, and we would indeed be bringing information to them. Therefore, this more significant time investment would not be wasted, and would bring value to the legislative office, outside of and beyond the value of the experiment to us. 
+
 
 
 
@@ -284,7 +286,7 @@ The first power analysis assumes a sample size of 535 respondents (i.e. the numb
 \label{fig: power_fed}
 \end{figure}
 
-We next conduct a power analysis using state legislatures. This theoretically could increase our possible sample size drastically, to roughly 5,000 respondents. However, we recognize that it would be logistically impractical for an organization to set up meetings with with such a large number of offices across such a wide geographical range. We therefore restrict ourself to a sample size of 1000, which could be achieved by sampling only from states in the Northeast United States. Using the same assumptions of treatment effect sizes and variable that informed the power analysis in \autoref{fig: power_fed}, \autoref{fig: power_state} depicts the statistical power results from this increased sample size. The larger sample size results in statistical power of 0.99, 0.55, and 1 in treatment groups 2, 3, and 4, respectively.\footnote{Rounded to the nearest 100th decimal place.}
+We next conduct a power analysis using state legislatures. This theoretically could increase our possible sample size drastically, to roughly 5,000 respondents. However, we recognize that it would be logistically impractical for an organization to set up meetings with with such a large number of offices across such a wide geographical range. We therefore restrict ourself to a sample size of 1000, which could be achieved by sampling only from states in the Northeast United States, or from states where the organization has a local presence. Using the same assumptions of treatment effect sizes and variable that informed the power analysis in \autoref{fig: power_fed}, \autoref{fig: power_state} depicts the statistical power results from this increased sample size. The larger sample size results in statistical power of 0.99, 0.55, and 1 in treatment groups 2, 3, and 4, respectively.\footnote{Rounded to the nearest 100th decimal place.}
 
 \begin{figure}[!htb]
 \includegraphics{../figs/power_state.pdf}
@@ -295,6 +297,8 @@ We next conduct a power analysis using state legislatures. This theoretically co
 
 
 \section{Conclusion} \label{sec:Conclusion}
+The next step on this project will be to gather feedback and make decisions on the key questions that are still open (federal or state level, partnership with an organization, choice of the policy and the information). We are hoping to make progress over the summer and next semester. In an ideal timeline, we would preregister a final Pre-Analysis-Plan with EGAP by the end of 2019, and we would conduct the experiment in 2020. We believe that this timeline would be ideal because of the political and electoral contexts expected in 2020. In an election year in which at least one party, if not both, will be looking for and at innovative policy ideas, it is possible that legislators will be particularly responsive to information on such policies. 
+
 
 
 \clearpage
