--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -41,6 +41,17 @@
 	Title = {Can Congress Do Policy Analysis?},
 	Year = {2016}}
 	
+@article{pornpitakpan2004persuasiveness,
+  title={The persuasiveness of source credibility: A critical review of five decades' evidence},
+  author={Pornpitakpan, Chanthika},
+  journal={Journal of applied social psychology},
+  volume={34},
+  number={2},
+  pages={243--281},
+  year={2004},
+  publisher={Wiley Online Library}
+}
+	
 	
 @book{mayhew1974congress,
 	Author = {Mayhew, David R},
@@ -49,6 +60,16 @@
 	Volume = {26},
 	Year = {1974}}
 
+@article{mcginnies1980better,
+  title={Better liked than right: Trustworthiness and expertise as factors in credibility},
+  author={McGinnies, Elliott and Ward, Charles D},
+  journal={Personality and Social Psychology Bulletin},
+  volume={6},
+  number={3},
+  pages={467--472},
+  year={1980},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
 
 @book{fenno1973congressmen,
 	Author = {Fenno, Richard F},
