--- a/doc/evidence_policy.tex
+++ b/doc/evidence_policy.tex
@@ -149,7 +149,7 @@
 
 \begin{abstract}
 \noindent
-The bipartisan Foundations for Evidence-Based Policymaking Act of 2018 stresses the need for evidence-based policy-making. We propose a field experiment that tests whether legislators are in actuality more receptive to higher standards of evidence in research when receiving policy-information. A related question is if legislators possess sufficient knowledge of evidence standards to be able to differentiate between varying standards of research quality. This pre-analysis plan proposes a field-experimental research design dedicated to answering these questions, and pre-registers the procedures that will be used to conduct this analysis.
+The bipartisan Foundations for Evidence-Based Policymaking Act of 2018 stresses the need for evidence-based policy-making. We propose a field experiment that tests whether legislators are actually more receptive to higher standards of research evidence when receiving and evaluating policy information. A related question is if legislators possess sufficient knowledge of evidence standards to be able to differentiate between varying standards of research quality. This pre-analysis plan proposes a field-experimental research design dedicated to answering these questions, and pre-registers the procedures that will be used to conduct the analysis.
 \end{abstract}
 
 \pagebreak
@@ -172,15 +172,21 @@ Our pre-analysis first presents the theory and existing literature we hope to ad
 \section{Theory} \label{sec:Theory}
 \subsection{Evidence in policymaking}  \label{sec: evidence}
 
-A growing literature examines if, when, and how evidence and expertise is used in policy-making. The conventional wisdom from the this literature in the US Congressional context has long been that evidence and information do not matter. Legislators are focused on reelection \citep{mayhew1974congress}, power within Congress \citep{fenno1973congressmen}, and responding to pressures from local constituents \citep{fenno2002home}. \citet{schick1976supply} concluded in 1976 that ``Congress is not a natural habit for policy analysis," and \citet{lindblom2018science} states that the best Congress can do is "muddle through" given institutional constraints and lack of time and resources. 
+A growing literature examines if, when, and how evidence and expertise is used in policy-making. The conventional wisdom from the this literature in the US Congressional context has long been that evidence and information do not matter. Legislators are focused on reelection \citep{mayhew1974congress}, power within Congress \citep{fenno1973congressmen}, and responding to pressures from local constituents \citep{fenno2002home}. \citet{schick1976supply} concluded in 1976 that ``Congress is not a natural habit for policy analysis," and \citet{lindblom2018science} states that the best Congress can do is ``muddle through" given institutional constraints and lack of time and resources. 
 
-Recently, however, scholars have called for a more nuanced understanding of the use of evidence in policy-making. [\citet{patashnik2016can}, despite well-identified methodological challenges \citep{mandell1984approaches}.] Case studies have suggested that evidence is used in policy-making, but we need a better understanding of how (much), when and why. Scholars have also examined the supply of scientific evidence, and have looked how scientists can maximize the use of scientific evidence. \citet{cairney2016politics} lays out two types of shortcuts used by legislators, rational decision-making and irrational decision-making drawing on emotions, beliefs and habits. He argues that scientists have mostly focused on the former, and that they should do a better job at accompanying evidence with simple stories to exploit the emotional or ideological biases of policymakers. We hope to test and measure legislators' ability to respond to the first, rational type of stimulus. 
+Recently, however, scholars have called for a more nuanced understanding of the use of evidence in policy-making \citep{patashnik2016can}, despite well-identified methodological challenges \citep{mandell1984approaches}. Case studies have suggested that evidence is used in policy-making, but we need a better understanding of how (much), when and why. Scholars have also examined the supply of scientific evidence, and have looked how scientists can maximize the use of scientific evidence. \citet{cairney2016politics} lays out two types of shortcuts used by legislators, rational decision-making and irrational decision-making drawing on emotions, beliefs and habits. He argues that scientists have mostly focused on the former, and that they should do a better job at accompanying evidence with simple stories to exploit the emotional or ideological biases of policymakers. We hope to test and measure legislators' ability to respond to the first, rational type of stimulus. 
 
-Depending on what and who the source of the information ends up being in the experiment, we could also look at literatures on messenger effects (does the source of information matter?), relations between diverse groups and policy-makers, etc. The initial goal is to conduct this experiment with the U.S. Congress, but we might end up conducting it at the State or more local levels (cf. below). In that case, literatures on state and local politics would come into play. Finally, this project might address broader, more theoretical questions on the functioning of our current democracies, and the potential gaps between reality and the ideals of deliberative democracies. We are also hoping that this project will contribute to ongoing philosophy of science discussions. What is the value of our different methods outside of the research community bubble, how are they perceived and understood by different targets (policy-makers for this specific experiment, but a similar experiment could later be conducted with citizens)? 
+Experimental research on messenger effects (i.e. does the source of information matter?) may also be relevant to our research design. Source credibility theory hypothesizes that high-credibility sources are more effective in matters of persuasion than low-credibility sources and distinguishes between expertise and trustworthiness as sources of credibility \citep{pornpitakpan2004persuasiveness}. Additional research has found that trustworthiness (i.e. being ``liked'') is more effective than expertise (i.e. being ``right'') \citep{mcginnies1980better}, implying that the source of evidence is important in addition to evidence quality. This implies that the institution responsible for the research may be highly important, and should therefore be held constant across treatment groups and should be a trusted, non-partisan instituion. 
+
+Our initial goal is to conduct this experiment with the U.S. Congress, however it may be necessary to change our focus to the the state or local level for power or logistical reasons. In this case, we would need to consider literature on policy deliberation in state and local politics. 
+
+Finally, this project may speak to broader theoretical questions on the functioning of our current democracies, and the potential gaps between reality and the ideals of deliberative democracies. In this sense, we hope this project will contribute to ongoing discussions within philosophy of science, such as perceptions of research methods and consumption of scientific evidence outside of the academy.
 
 \subsection{Legislator contact experiments}  \label{sec: contact experiments}
 
-Randomized contact of legislators in American politics research remains relatively rare. \autoref{tab:audit_experiments} below summarizes previous studies. Our design most closely resembles a mix of the experiments conducted by \citet{butler2011politicians} and \citet{kalla2016campaign}. Our factorial design will come close to \citet{butler2011politicians}'s 2x3 design (and may use their contact list for state legislatures). We also plan to emulate \citet{kalla2016campaign}'s use of a third party organization to contact legislators, as well as their more nuanced outcome measure: both rate of response to emails and the seniority of the person who has agreed to meet with the organization. The use of roll call votes as in \citet{bergan2009does} is likely only possible for an experiment that targets one bill in one Chamber. Roll call votes is not a realistic outcome measure in our case: even if we were to reach out with policy information on a specific bill, too much would happen between us reaching out and the MC eventual vote for us to be able to isolate the effect of us reaching out. 
+Randomized contact of legislators in American politics research remains relatively rare. \autoref{tab:audit_experiments} below summarizes previous field-experimental studies that have contacted legislators. Our design most closely resembles a mix of the experiments conducted by \citet{butler2011politicians} and \citet{kalla2016campaign}. Our factorial design will come close to \citet{butler2011politicians}'s 2x3 design (and may use their contact list for state legislatures). We also plan to emulate \citet{kalla2016campaign}'s use of a third party organization to contact legislators, as well as their more nuanced outcome measure: both rate of response to emails and the seniority of the person who has agreed to meet with the organization. The use of roll call votes as in \citet{bergan2009does} is likely only possible for an experiment that targets one bill in one Chamber. 
+
+%Roll call votes are not a realistic outcome measure in our case: even if we were to reach out with policy information on a specific bill, too much would happen between us reaching out and the MC eventual vote for us to be able to isolate the effect of us reaching out. [That should be ok? The treatment would still delivered randomly.]
 
 
 
@@ -222,7 +228,7 @@ Reference
 
 \subsection{Treatment groups and randomization} \label{sec:Treatment}
 
-Policy-makers will be contacted and provided with information on findings from a policy study. This will take the form of a 2x2 factorial design with two treatments: (i) the evidence standard used in the study (low vs high) and (ii) whether we provide policy-makers with information explaining the evidence standards. \autoref{tab: arms} synthesizes our treatment arms. Additional details regarding the types of evidence standards and policies included in each arm are described in \nameref{sec:Evidence} below. 
+Policy-makers will be contacted and provided with information on findings from a policy study. This will take the form of a 2x2 factorial design with two treatments: (i) the evidence standard used in the study (low vs high) and (ii) whether we provide policy-makers with information explaining the evidence standards (no explanatory information or explanatory information). \autoref{tab: arms} synthesizes our treatment arms. Additional details regarding the types of evidence standards and policies included in each arm are described in \nameref{sec:Evidence} below. 
 
 Given the small sample size inherent in any study using a sample of legislators, we will conduct block random assignment based upon a vector of pre-treatment covariates in order to increase the precision of our treatment effect estimates. Examples of pre-treatment covariates that can be used to create the blocks would be party, chamber, education level of the legislator (if data is available), closeness of the district, state, etc. In other words, legislators will be divided into blocks based on these pre-treatment covariates, then will be randomly assigned to a treatment condition within each block. Which treatment arm (i.e. form of contact) a policy-maker receives will be randomized using complete random assignment, and will in practice be conducted using the ``complete\_ra'' function in the R package \textit{randomizr} (part of the \textit{DeclareDesign} suite).
 
@@ -243,35 +249,51 @@ Information    & Low and info       &  High and info              \\ \hline
 
 We rely on evidence standards and descriptions already adopted in some laws (Elementary and Secondary Education Act - ESEA 65, No Child Left Behind - NCLB 01, Every Student Succeeds Act - ESSA 15) and used by the Department of Education (DoE) and Department of Labor (DoL). The DoL defines three tiers of evidence: high causal evidence (primarily RCTs), moderate causal evidence (strong non-experimental designs or RCTs with high attrition) or low causal evidence studies. The DOL defines the low causal studies as studies that do not meet criteria for a high or moderate evidence rating. Those studies, according to the DoL, show little evidence that the effects estimated in the study are attributable to the intervention being examined, and other factors are likely to have contributed to the results. They should be interpreted with caution. The DoE has adopted similar standards (see \autoref{sec: DoE}). 
 
-We use these standards because they are ostensibly used in actual policy-making decisions. These definitions already exist, are specified in law and implementation texts, and have been referenced in previous projects and studies (see below). For simplicity sake, statistical power reasons as well as substantive interest, we will focus on the studies from the higher tier of evidence and those from the lowest tier. This will keep our factorial design to a manageable 2x2 design. One downside of this approach is that it may require us to restrict ourselves to quantitative studies.\footnote{We have not yet looked at the databased and associated studies. We doubt it, but it is possible that qualitative studies are already incorporated into the databases and one of the 3 evidence standards} We will need to think about whether we want to add qualitative studies as an additional category. We will also need to check whether qualitative studies are used in the DoE and DoL databases, and if yes, under which tier of evidence. 
+We use these standards because they are ostensibly used in actual policy-making decisions. These definitions already exist, are specified in law and implementation texts, and have been referenced in previous projects and studies (see below). In order to maximize statistical power and increase the clarity of our research design, we will focus only the studies from the highest tier of evidence and those from the lowest tier. This will keep our experimental design to a 2x2 factorial design, as opposed to a higher dimensional design that would result from inclusion of all evidence tiers. One potential downside of this approach is that it may require us to restrict ourselves to quantitative studies.\footnote{We have not yet looked at the databased and associated studies. We doubt it, but it is possible that qualitative studies are already incorporated into the databases and one of the 3 evidence standards. We will need to think about whether we want to add qualitative studies as an additional category. We will also need to check whether qualitative studies are used in the DoE and DoL databases, and if yes, under which tier of evidence.} 
 
 \subsection{Choice of policy} \label{sec: Policy}
 
 The policy and specific findings we will report on are yet to be determined. Ideally, we would use similar findings coming from 3 or 4 studies belonging to different tiers of evidence. The DoE and DoL each have comprehensive databases of most studies conducted in their respective policy areas, their findings and the evidence tier to which they belong. We can leverage these existing databases (What Works Clearing House for the DoE, CLEAR for the DoL) in order to find studies we can use in our experiment. 
 
-For ethical reasons we will need to locate studies that reach similar results using different methods (ethics are considered in more detail in the \nameref{sec:Ethics} section below). More specifically, the results of the studies will need to be similar enough to use the same one-sentence summaries in our messages without resorting to deception. Depending on the studies that we find, we might need to be more or less specific in the formulation of the results in our email (it could be anything from a very broad result such as 'small classes are better' to more specific results such as 'adding curriculum x to classes y raises z'). Ideally, the results would also be surprising or new, in order to both maximize the level of new information we are providing, as well as to raise the incentives of meeting with an organization regarding the results. For example, providing policymakers with information regarding an educational policy that has already been adopted would be ignored for reasons unrelated to the content of the randomized treatments. 
+For ethical reasons we will need to locate studies that reach similar results using different methods (ethics are considered in more detail in the \nameref{sec:Ethics} section below). More specifically, the results of the studies will need to be similar enough to use the same one-sentence summaries in our messages without resorting to deception. Depending on the studies that we find, we might need to be more or less specific in the formulation of the results in our email (it could be anything from a very broad result such as ``small class size increase educational outcomes'' to more specific results such as ``adding curriculum x to classes y raises z''). Ideally, the results would also be surprising or new, in order to both maximize the level of new information we are providing, as well as to raise the incentives of meeting with an organization regarding the results. For example, providing policymakers with information regarding an educational policy that has already been adopted would be ignored for reasons unrelated to the content of the randomized treatments. 
 
 \subsection{Outcomes} \label{sec: Outcomes}
-What outcomes we would measure and how is still an open question. The more realistic solution would be to measure response rates to our email. If we are more ambitious and partner with a 3rd party organization, we could ask to set meetings and use the seniority of whoever we get a meeting with as another measure of the importance given to our approach. The model for this would be \citet{kalla2016campaign}. If we actually set meetings (through a third-party organization), more qualitative observations of policy-makers? understanding of and responsiveness to evidence standards could be gathered. 
+What outcomes we would measure and how is still an open question. The simplest outcome to measure would be email response rates. If we are able partner with a 3rd party organization, we will examine two outcome measures: (1) whether or not a meeting was established, and (2) the seniority of the individual with whom a successful meeting was granted. This design mirrors that of \citet{kalla2016campaign}. Setting meetings would also allow us to gather additional qualitative information analyzing the substance of discussions between the third party organization and policymakers, in addition to the content of the email responses .
 
 \subsection{Partnership with 3rd party organization} \label{sec: Partnership}
 
-The source of the email will be important, and has yet to be determined. In order to maximize the realism and reach of the experiment, we will probably need to partner with a third-party organization. Emails will come from this organization, not from us ? once again, modelling \citet{kalla2016campaign}'s experiment. We could reach out to think tanks, policy labs, advocacy groups to partner with for this project. If we work with state and local policy makers, we will try to find a group with a large geographic and regional presence. It would be better to reach out to policy-makers in Idaho with a group with some presence if not in Idaho, at least in the northwest. 
+The source of the email has yet to be determined. In order to maximize the realism and reach of the experiment, we will ideally partner with a third-party organization seeking to establish meetings with policymakers. Emails will be sent from this organization, rather than from us. Once again, this design mirrors that of \citet{kalla2016campaign}. To this end, we will contact think tanks, policy labs, and advocacy groups as potential partners. 
+
+%If we work with state and local policy makers, we will try to find a group with a large geographic and regional presence. It would be better to reach out to policy-makers in Idaho with a group with some presence if not in Idaho, at least in the northwest. 
 
 \subsection{Federal or state level?} \label{sec: Level}
 
-Conducting the experiment at the federal level would be substantially interesting (we are using recent initiatives happening at the federal level as motivations for this project). It might also be logistically easier to organise and attend meetings at the federal level. But we might end up conducting it at the State or more local levels, for multiple reasons. First, we might encounter power issues if we have multiple treatment arms and a fixed N of 535 (see \nameref{sec:Power}). Second, only two policy areas have existing, well-defined evidence standards and associated studies: education and labor policies. If the policy we end up choosing is mostly conducted at the state and local level, it might make substantially more sense to conduct the experiment at this level. Finally, there is a substantive interest as to whether state and local politics can help compensate for the shortcomings of the federal level, both in terms of quantity (gridlock) and quality (less polarized, more time to act). 
+Conducting the experiment at the federal level would be of primary substantive interesting, as recent federal initiatives provide motivation for this study. In addition, it may be logistically easier to organize and attend meetings at the federal level, as these meetings could be centralized in Washington DC. However, we may be required to conduct the study at the state or local level for two primary reasons. First, we may encounter power issues with multiple treatment arms and a fixed N of 535 (see \nameref{sec:Power}). Second, only two policy areas have existing, well-defined evidence standards and associated studies: education and labor policies. If the policy we choose is primarily a topic of state and/or local level debate, it may be better to conduct the experiment at this level. 
+
+%Finally, there is a substantive interest as to whether state and local politics can help compensate for the shortcomings of the federal level, both in terms of quantity (gridlock) and quality (less polarized, more time to act). 
+
+\section{Ethical considerations} \label{sec:Ethics}
+
+We recognize that reaching out to policy-makers with information on a policy can possibly involve ethical challenges. \citet{butler2011politicians} lay out three types of ethical risks associated with experiments on public officials. The first is the use of deception: policymakers will be unaware that the emails we send are part of an experiment. However, the information we provide to policymakers will be real, and we will offer to organize actual meetings with an organization that wishes to meet with policymakers. This implies that the only deception involved is the existence of experimental manipulation itself.
+
+A second potential ethical risk is political harm to the legislator. To this end, the anonymity all legislators and their responses will be preserved: no data will be available that can connect an answer to a specific legislator - only averages will be made public.
+
+A third risk is the potential burden our experiment would place on legislators' time. We will therefore do our best to keep our messages as short and simple as possible, while still containing all of the necessary information. We recognize that a meeting will take time out of legislators' already busy schedules. However, we believe that an office that agrees to the meeting would be interested in learning about the given policy, and indeed would be  performing one of the normal function of policymakers - meeting with interest groups as a form of knowledge acquisition. This time investment would therefore not be wasted and would bring value to both the legislative office and the interest group, outside of and beyond the value of the experiment to us. 
 
 \section{Experimental analysis} \label{sec:analysis}
 
 \subsection{Estimation of treatment effects} \label{sec:treatment_effects}
-Treatment effects for this experiment will be computed using a simple Difference in Means (DIM) estimator, with appropriate weighting based on our chosen block assignment mechanism. 
+
+As noted above, we intend to use block random assignment in order  to increase the precision of our treatment effect estimates as well as to facilitate (preregistered) estimation of heterogenous treatment effects. Treatment effect estimates will therefore be calculated as the difference-in-means of the response rate from subjects in each of treatment groups and the response rate from subjects in the control group in each block, weighted by the number of subjects in each block relative to the total number of subjects.
+
+In practice, these differences-in-means will be calculated using a weighted least squares regression of response rate on treatment assignment, with weights corresponding to the inverse probability of treatment for each unit (IPW). All p-values will be calculated using randomization inference. As the reference/control group in the experiment is in effect the ``No information / lower tier'' treatment group, all effects must be interpreted in relation to this treatment. In other words, treatment effects should be interpreted as the change in response rate relative to the ``No information / lower tier'' group.
+
+\subsection{Heterogenous treatment effects} \label{sec: hte}
 
 
-\section{Ethical considerations} \label{sec:Ethics}
-We recognize that reaching out to policy-makers with information on a policy can possibly involve ethical challenges. \citet{butler2011politicians} lay out three types of ethical risks associated with experiments on public officials. The first is the use of deception: policy-makers will not know that the email we send are part of an experiment. However, the information we will provide policy-makers will be real, and we will offer to organize real meetings with an organization that specializes on the topic and on reaching out to legislators. Therefore, we believe we would only be widening the pie of knowledge for policy-makers, providing new information that they would not otherwise have received, without taking anything away from anyone. Our net effect on the legislature will be positive, without any individual negative effect. The second ethical risk implies to minimize any harm that the experiment can cause. The anonymity of legislator will be preserved: no data will be available that can connect an answer to a specific legislator, only averages will be made public. This need for anonymity fits well with what science requires: we would never observe all potential outcomes for an individual legislator, therefore the only causal value of the experiment is in the averages. The third risk is the potential burden our experiment would place on legislators' time. We will do our best to keep our initial email as short and simple as possible, in order to minimize the efforts involved in answering. We recognize that a meeting would take more time out of legislators' already busy schedules. But we believe that an office that agrees to the meeting would be interested in learning about the given policy, and we would indeed be bringing information to them. Therefore, this more significant time investment would not be wasted, and would bring value to the legislative office, outside of and beyond the value of the experiment to us. 
+In addition, we will test for heterogenous treatment effects on legislator party and educational attainment. Our test will take the form of regressing our outcome variable on treatments conditional upon the data representing the covariate of interest. In other words, we will split our sample by subject attributes (party and educational attainment), then estimate conditional average treatment effects (CATEs) separately for each of these attributes. For example, to test for heterogenous effects by party, we will regress outcomes on treatments for all legislators in each party.
 
-
+We recognize that the search for heterogenous treatment effects often suffers from the multiple comparisons problem. In a dataset with a large number of covariates, if a large enough number of subgroups is examined, it is highly likely that statistically significant interaction effects will emerge merely by chance. In other words, the more significance tests are performed, the higher the likelihood of falsely rejecting the null hypothesis at least once. We minimize this risk be preregistering our heterogenous effects of interests, as well as by performing multiple comparisons corrections using Bonferroni, Holm-Bonferroni, and Benjamin-Hochburg adjustment procedures.
 
 
 \section{Power Analysis} \label{sec:Power}
@@ -299,7 +321,8 @@ We next conduct a power analysis using state legislatures. This theoretically co
 
 
 \section{Conclusion} \label{sec:Conclusion}
-The next step on this project will be to gather feedback and make decisions on the key questions that are still open (federal or state level, partnership with an organization, choice of the policy and the information). We are hoping to make progress over the summer and next semester. In an ideal timeline, we would preregister a final Pre-Analysis-Plan with EGAP by the end of 2019, and we would conduct the experiment in 2020. We believe that this timeline would be ideal because of the political and electoral contexts expected in 2020. In an election year in which at least one party, if not both, will be looking for and at innovative policy ideas, it is possible that legislators will be particularly responsive to information on such policies. 
+
+Our next steps on this project include finalization of some of the research design decisions that remain open (i.e. federal or state level subjects, partnership with an organization, and choice of the policy). We hope to finalize these details over the summer and to preregister a final Pre-Analysis-Plan with EGAP by the end of 2019. We would then conduct the experiment in 2020. We believe that this timeline would be ideal because of the political and electoral contexts expected in 2020. An election year increases the likelihood that parties will be seeking innovative policy ideas, and it is therefore possible that legislators will be particularly responsive to information on such policies. 
 
 
 
