Updates to heterogenous treatment effect testing procedures

--- a/doc/evidence_policy.tex
+++ b/doc/evidence_policy.tex
@@ -141,7 +141,7 @@
 \title{\textbf{Legislators and use of evidence: double standards? A field experiment \\
 (Pre-Analysis Plan)}\vspace{-1ex}\thanks{}}
 % Thanks
-\author{Angele Delevoye\thanks{angele.delevoye@yale.edu}\vspace{-1ex}}
+\author{Angèle Delevoye\thanks{angele.delevoye@yale.edu}\vspace{-1ex}}
 \author{Trevor Incerti\thanks{trevor.incerti@yale.edu}\vspace{-1ex}}
 \affil{\textit{Yale University}\vspace{-2.5ex}}
 \date{\today}
@@ -298,7 +298,7 @@ In practice, these differences-in-means will be calculated using a weighted leas
 \subsection{Heterogenous treatment effects} \label{sec: hte}
 
 
-In addition, we will test for heterogenous treatment effects on legislator party and educational attainment. Our test will take the form of regressing our outcome variable on treatments conditional upon the data representing the covariate of interest. In other words, we will split our sample by subject attributes (party and educational attainment), then estimate conditional average treatment effects (CATEs) separately for each of these attributes. For example, to test for heterogenous effects by party, we will regress outcomes on treatments for all legislators in each party.
+In addition, we will test for heterogenous treatment effects on legislator party and educational attainment. Our test will take the form of regressing our outcome variable on treatments conditional upon the data representing the covariate of interest. In other words, we will split our sample by subject attributes (party and educational attainment), then estimate conditional average treatment effects (CATEs) separately for each of these attributes. For example, to test for heterogenous effects by party, we will regress outcomes on treatments for all legislators in each party. Following estimation of CATEs, we will use randomization inference to test the null hypothesis that CATEs in both groups (e.g. Democrat and Republican) equal to the ATE.
 
 We recognize that the search for heterogenous treatment effects often suffers from the multiple comparisons problem. In a dataset with a large number of covariates, if a large enough number of subgroups is examined, it is highly likely that statistically significant interaction effects will emerge merely by chance. In other words, the more significance tests are performed, the higher the likelihood of falsely rejecting the null hypothesis at least once. We minimize this risk be preregistering our heterogenous effects of interests, as well as by performing multiple comparisons corrections using Bonferroni, Holm-Bonferroni, and Benjamin-Hochburg adjustment procedures.
 
